force-app/main/default/objects/Webhook2FlowHandler__mdt/Webhook2FlowHandler__mdt.object-meta.xml
<CustomObject>
    <description>This CMDT stores the mappings of incoming Webhook events and their respective handler Flows.</description>
    <label>Webhook2FlowHandler</label>
    <pluralLabel>Webhook2FlowHandler</pluralLabel>
</CustomObject>