force-app/main/default/objects/Webhook2FlowHandler__mdt/fields/EventDefnApexClass__c.field-meta.xml
<CustomField>
    <fullName>EventDefnApexClass__c</fullName>
    <inlineHelpText>Name of the Apex class containing the Webhook event&apos;s payload definition.</inlineHelpText>
    <label>Event Defn ApexClass</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>