force-app/main/default/objects/Webhook2FlowHandler__mdt/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <inlineHelpText>Api name of the flow to be invoked when the corresponding webhook event is received.</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>