force-app/main/default/objects/Webhook2FlowHandler__mdt/fields/FlowInputVariableName__c.field-meta.xml
<CustomField>
    <fullName>FlowInputVariableName__c</fullName>
    <inlineHelpText>Name of the flow input variable that&apos;ll store the webhook event information. 
NOTE: Name is case-sensitive.</inlineHelpText>
    <label>FlowInputVariableName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>