force-app/main/default/objects/Webhook2FlowHandler__mdt/fields/PayloadLocation__c.field-meta.xml
<CustomField>
    <fullName>PayloadLocation__c</fullName>
    <description>Used to indicate which part of the request contains the webhook event information.</description>
    <label>PayloadLocation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RequestBody</fullName>
                <default>true</default>
                <label>RequestBody</label>
            </value>
            <value>
                <fullName>QueryParams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>