force-app/main/default/objects/Webhook2FlowHandler__mdt/fields/WebhookEventName__c.field-meta.xml
<CustomField>
    <fullName>WebhookEventName__c</fullName>
    <label>WebhookEventName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>