force-app/main/default/objects/Webhook2FlowHandler__mdt/validationRules/DeveloperNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DeveloperNameValidation</fullName>
    <active>true</active>
    <errorConditionFormula>DeveloperName &lt;&gt;  WebhookEventName__c</errorConditionFormula>
    <errorMessage>DeveloperName must be same the Webhook Event Name</errorMessage>
</ValidationRule>